--- a/src/components/module/bookAnAppointment/auth/signIn/signIn.module.scss
+++ b/src/components/module/bookAnAppointment/auth/signIn/signIn.module.scss
@@ -54,122 +54,20 @@
   gap: rem(12);
 }
 
-.inputGroup {
-  position: relative;
-  display: flex;
-  flex-direction: column-reverse;
-  height: rem(48);
-  width: 100%;
-
-  input,
-  select {
-    border: none;
-    border-bottom: 1px solid getColorHex("grey-light");
-    font-size: rem(16);
-    width: 100%;
-    transition: border-color 0.3s;
-    background-color: transparent;
-    height: 100%;
-
-    &:focus {
-      outline: none;
-      border-bottom-color: getColorHex("black");
-    }
-  }
-
-  label {
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    font-size: 16px;
-    color: #787775;
-    pointer-events: none;
-    transition: all 0.3s ease;
-    transform-origin: left bottom;
-    transform: translateY(0);
-    top: 50%;
-    transform: translateY(-50%);
-  }
-
-  input:focus + label,
-  input:not(:placeholder-shown) + label {
-    transform: translateY(-130%) scale(0.8);
-    color: #000;
-  }
-
-  /* Handle errors */
-  .inputError {
-    border-bottom-color: red;
-  }
-
-  .errorMessage {
-    color: red;
-    font-size: 12px;
-    margin-top: 5px;
-  }
-}
-
-.phoneWrapper {
-  display: flex;
-  gap: 10px;
-  width: 100%;
-
-  select {
-    border-bottom: rem(1) solid getColorHex("grey-light");
-    background-color: transparent;
-    width: rem(64);
-    color: getColorHex("grey");
-    font-size: rem(16);
-    line-height: rem(26);
-    letter-spacing: rem(0.2);
-
-    &:focus {
-      outline: none;
-      border-bottom-color: getColorHex("black");
-    }
-  }
-}
 
 .orDivider {
-  text-align: center;
-  font-size: 14px;
-  color: #787775;
-  margin-bottom: -20px;
+  font-size: rem(14);
+  color: getColorHex("grey-mid");
+  margin-bottom: rem(-20);
 
-  border-radius: 16px 0px;
-  background: var(--GreyShades-Lighter-Grey, #e9e8e3);
+  border-radius: rem(16) 0px;
+  background-color: getColorHex("grey-light");
   display: flex;
-  padding: 12px;
+  padding: rem(12);
   justify-content: center;
   align-items: center;
-  gap: 8px;
-  width: 46px;
-  height: 44px;
-}
-
-.submitButton,
-.otpButton {
-  padding: 10px;
-  background-color: #000;
-  color: #fff;
-  font-size: 16px;
-  border: none;
-  cursor: pointer;
-  border-radius: 4px;
-  width: 100%;
-}
-
-.submitButton:hover,
-.otpButton:hover {
-  background-color: #333;
-}
-
-.submitButton {
-  margin-top: rem(10);
-}
-
-.otpButton {
-  margin-top: rem(10);
+  width: rem(46);
+  height: rem(44);
 }
 
 .oneBtn {
