--- a/src/components/module/bookAnAppointment/auth/inputField/inputField.module.scss
+++ b/src/components/module/bookAnAppointment/auth/inputField/inputField.module.scss
@@ -12,11 +12,16 @@
   select {
     border: none;
     border-bottom: rem(1) solid getColorHex("grey-light");
-    font-size: rem(16);
+    font-size: rem(14);
     width: 100%;
     transition: border-color 0.3s;
     background-color: transparent;
     height: 100%;
+    
+    @include md {
+      font-size: rem(16);
+
+    }
 
     &:focus {
       outline: none;
@@ -41,6 +46,8 @@
     transition: border-color 0.3s;
     box-sizing: border-box;
 
+    width: 100%;
+
     &:focus {
       outline: none;
       border-bottom-color: getColorHex("black");
@@ -56,7 +63,7 @@
     position: absolute;
     left: 0;
     bottom: 0;
-    font-size: rem(16);
+    font-size: rem(14);
     pointer-events: none;
     transition: all 0.3s ease;
     transform-origin: left bottom;
@@ -66,6 +73,10 @@
     color: getColorHex("grey");
     line-height: rem(26);
     letter-spacing: rem(0.2);
+    
+    @include md {
+      font-size: rem(16);
+    }
   }
 
   input:focus + label,
