--- a/src/components/module/bookAnAppointment/auth/signIn/signIn.module.scss
+++ b/src/components/module/bookAnAppointment/auth/signIn/signIn.module.scss
@@ -6,6 +6,11 @@
   width: 100%;
   margin: 0 auto;
   gap: rem(40);
+  flex-direction: column;
+
+  @include md {
+    flex-direction: row;
+  }
 }
 
 .leftSide,
@@ -21,7 +26,12 @@
   flex-direction: column;
   align-items: center;
   justify-content: flex-end;
-  gap: rem(62);
+  gap: rem(32);
+  
+  @include md {
+    gap: rem(62);
+
+  }
 }
 
 .signin {
@@ -52,8 +62,12 @@
 .formGroupPhone {
   display: flex;
   gap: rem(12);
-}
+  width: 100%;
 
+  div:last-child {
+    width: 100%;
+  }
+}
 
 .orDivider {
   font-size: rem(14);
