--- a/src/components/module/bookAnAppointment/selectedLocation/selectedLocation.module.scss
+++ b/src/components/module/bookAnAppointment/selectedLocation/selectedLocation.module.scss
@@ -4,10 +4,15 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #fff;
-  padding: rem(32);
-  max-width: rem(800);
-  border: 1px solid var(--GreyShades-Lighter-Grey, #e9e8e3);
+  background-color: getColorHex("white");
+  padding: rem(20);
+  width: 100%;
+  border: rem(1) solid getColorHex("grey-light");
+  
+  @include md {
+    padding: rem(32);
+    max-width: rem(800);
+  }
 }
 
 .content {
@@ -35,44 +40,49 @@
 .locationDetails {
   width: 100%;
   h2 {
-    color: var(--Secondary-Dark-Green, #464f4a);
-    font-size: 26px;
-    font-style: normal;
+    color: getColorHex("green-dark");
     font-weight: 500;
-    line-height: 36px; /* 138.462% */
-    letter-spacing: 0.6px;
+    line-height: rem(26); 
+    letter-spacing: rem(0.6);
+    font-size: rem(18);
     margin: 0;
+    
+    @include md {
+      line-height: rem(36); 
+      font-size: rem(26);
+    }
   }
 
   p {
-    font-size: 1rem;
-    margin: 4px 0 0;
+    font-size: rem(16);
+    margin: rem(4) 0 0;
     display: flex;
     align-items: center;
 
     span {
       display: flex;
       align-items: center;
-      color: var(--Secondary-Dark-Green, #464f4a);
-
-      /* Desktop/BodyCopy/Default */
-      font-size: 16px;
-      font-style: normal;
-      font-weight: 400;
-      line-height: 26px; /* 162.5% */
-      letter-spacing: 0.2px;
+      color: getColorHex("green-dark");
+      font-size: rem(14);
+      line-height: rem(22);
+      letter-spacing: rem(0.2);
+      
+      @include md {
+        line-height: rem(26);
+        font-size: rem(16);
+      }
     }
   }
 
   .icon {
-    margin-right: 8px;
+    margin-right: rem(8);
   }
 }
 
 .closeBtn {
   background: none;
   border: none;
-  font-size: 1.5rem;
+  font-size: rem(24);
   cursor: pointer;
-  padding: 0 8px;
+  padding: 0 rem(8);
 }
