--- a/src/components/module/bookAnAppointment/otp/otp.module.scss
+++ b/src/components/module/bookAnAppointment/otp/otp.module.scss
@@ -2,16 +2,22 @@
 
 .otpContainer {
   text-align: center;
-  padding: rem(20);
+  padding: rem(0);
   display: flex;
   flex-direction: column;
-  gap: rem(36);
+  gap: rem(20);
+  width: 100%;
 
-  h2 {
+  @include md {
+    gap: rem(36);
+    padding: rem(20);
+  }
+
+  h2,
+  .title {
     @include heading_regular;
     font-size: rem(24);
     font-weight: 500;
-    margin-bottom: rem(10);
 
     color: getColorHex("green-dark");
     text-align: center;
@@ -20,6 +26,11 @@
     font-weight: 500;
     line-height: rem(44);
     letter-spacing: rem(0.6);
+    margin: 0;
+
+    @include md {
+      margin-bottom: rem(10);
+    }
   }
 
   p {
@@ -46,6 +57,13 @@
       border-bottom: rem(1) solid getColorHex("grey-light");
       outline: none;
       transition: border-color 0.3s ease-in-out;
+      width: rem(39.33);
+      flex: 1;
+      min-width: rem(30);
+
+      @include md {
+        width: rem(117);
+      }
 
       &:focus {
         border-color: getColorHex("black");
@@ -79,8 +97,6 @@
         border-bottom: rem(1) solid getColorHex("green-dark");
       }
     }
-
-  
   }
 
   .submitBtn {
