--- a/src/components/module/bookAnAppointment/stepFour/index.module.scss
+++ b/src/components/module/bookAnAppointment/stepFour/index.module.scss
@@ -51,6 +51,7 @@
     line-height: rem(26);
     letter-spacing: rem(0.2);
     text-transform: uppercase;
+    text-align: center;
 
     @include md {
       line-height: rem(22);
