--- a/src/components/module/bookAnAppointment/selectedLocation/selectedLocation.module.scss
+++ b/src/components/module/bookAnAppointment/selectedLocation/selectedLocation.module.scss
@@ -8,7 +8,7 @@
   padding: rem(20);
   width: 100%;
   border: rem(1) solid getColorHex("grey-light");
-  
+
   @include md {
     padding: rem(32);
     max-width: rem(800);
@@ -39,16 +39,17 @@
 
 .locationDetails {
   width: 100%;
-  h2 {
+  h2,
+  .title {
     color: getColorHex("green-dark");
     font-weight: 500;
-    line-height: rem(26); 
+    line-height: rem(26);
     letter-spacing: rem(0.6);
     font-size: rem(18);
     margin: 0;
-    
+
     @include md {
-      line-height: rem(36); 
+      line-height: rem(36);
       font-size: rem(26);
     }
   }
@@ -66,7 +67,7 @@
       font-size: rem(14);
       line-height: rem(22);
       letter-spacing: rem(0.2);
-      
+
       @include md {
         line-height: rem(26);
         font-size: rem(16);
